Changelog
=========

3.0.6 (unreleased)
------------------

- Nothing changed yet.


3.0.5 (2015-06-05)
------------------

- Additional check in BaseControllerPageTemplate when we try to delete an entry
  from the request, that has already been deleted [cekk]


3.0.4 (2015-03-08)
------------------

- Reduce verbosity of _read_action_metadata and _read_validator_metadata when there are no default action or default validator assigned.
  [ericof]

- Ported to plone.app.testing
  [tomgross]


3.0.3 (2013-01-13)
------------------

- Use obj.__parent__ instead of obj getParentNode() for Zope trunk
  compatibility.
  [elro]

- ControllerState.py: Don't use list as default parameter value.
  [kleist]

3.0.2 - 2011-04-03
------------------

- Update RoleManager imports to avoid deprecation warning on Zope 2.13.
  [davisagli]

3.0.1 - 2010-10-27
------------------

- Fixed template with chameleon incompatibility.
  [swampmonkey]

3.0 - 2010-07-18
----------------

- No changes.

3.0a1 - 2009-11-13
------------------

- Adjust this package's FSPythonScript subclass to reflect cleanup in Zope2
  and CMF.
  [davisagli]

- Silence more warnings for calling `manage_*` methods.
  [hannosch]

- Avoid acquiring `portal_properties` and call it via a proper API.
  [hannosch]

- Cleaned up package metadata.
  [hannosch]

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- Correct license in egg metadata.
  [wichert]

- Purged old Zope 2 Interface interfaces for Zope 2.12 compatibility.
  [elro]

2.1.2 - 2008-03-26
------------------

- Added metadata.xml to GenericSetup profile.
  [hannosch]

2.1.1 - 2007-10-07
------------------

- Removed two __traceback_info__'s from ControllerBase which where both
  causing too much speed cost and optimized some Acquisition handling.
  [hannosch]

- Fixed #7027 : ControllerState.__str__ loaded files in memory
  [zegor]

- Made tests pass without Plone being installed.
  [hannosch]

2.1 - 2007-08-09